# solid-python

./: .gitignore  pyproject.toml
python_solid_principles/: ordinal.py  srp.py
python_solid_principles/dip/: depend_on_concretions.py  descriptors.py  testability.py  testability_2.py
python_solid_principles/isp/: factory.py  fat_interfaces.py  multiple_inheritance.py  person.py  printer.py  printer_2.py  storage.py  switch_and_light.py  switch_and_light_2.py
python_solid_principles/jas/: formatting.py
python_solid_principles/jas/employees/: entities.py
python_solid_principles/jas/products/: repositories.py
python_solid_principles/jas/resellers/: entities.py
python_solid_principles/jas/sales/: entities.py  reports.py  repositories.py  services.py  validation.py
python_solid_principles/lsp/: __init__.py  ducks.py  shapes.py
python_solid_principles/ocp/: send_email.py
python_solid_principles/product_management_system/: product.py
python_solid_principles/product_management_system/employees/: entities.py
python_solid_principles/product_management_system/products/: entities.py  repositories.py
python_solid_principles/product_management_system/sales/: entities.py  reports.py  repositories.py
tests/: factories.py  test_ordinal.py
tests/jas/: factories.py  test_formatting.py
tests/jas/sales/: test_reports.py
tests/lsp/: test_shapes.py
tests/ocp/: test_send_email.py
tests/sales/: test_reports.py
