[tool.poetry]
name = "python-solid-principles"
version = "0.1.0"
description = ""
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
pytest-mock = "^3.3.1"
isort = "^5.6.4"
factory_boy = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
